{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 20,
  "lineage": "e49d56d8-60d7-b5d4-6993-f3dbf5dfefc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04f12b5cbe2b0b8b0",
            "domain": "vpc",
            "id": "eipalloc-49e69e72",
            "instance": "i-0f751f00f528b133b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09079c4f947607bd9",
            "private_dns": "ip-172-31-14-14.eu-central-1.compute.internal",
            "private_ip": "172.31.14.14",
            "public_dns": "ec2-18-198-125-16.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.125.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0767046d1677be5a0",
            "arn": "arn:aws:ec2:eu-central-1:060895825842:instance/i-0f751f00f528b133b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f751f00f528b133b",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "maximilian",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09079c4f947607bd9",
            "private_dns": "ip-172-31-14-14.eu-central-1.compute.internal",
            "private_ip": "172.31.14.14",
            "public_dns": "ec2-18-184-61-74.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.61.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064c5b9b9299164af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20210514072212718400000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ecf134a0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c26c62f53ab901ab"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:060895825842:security-group/sg-0b7efed2e92bed73f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b7efed2e92bed73f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c26c62f53ab901ab"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20210514072214746800000002",
            "name_prefix": "terraform-",
            "owner_id": "060895825842",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-4b518121"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:060895825842:security-group/sg-0c26c62f53ab901ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c26c62f53ab901ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20210514072212718400000001",
            "name_prefix": "terraform-",
            "owner_id": "060895825842",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-4b518121"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}